Fix wrapping for long titles in add pane dialog

--- a/css/panels_dnd.css
+++ b/css/panels_dnd.css
@@ -1,4 +1,4 @@
-/* $Id: panels_dnd.css,v 1.1.2.24 2008/06/02 16:39:07 merlinofchaos Exp $ */
+/* $Id: panels_dnd.css,v 1.1.2.25 2008/06/02 16:49:14 merlinofchaos Exp $ */
 
 #panels-dnd-main {
   margin: 0.5em 0;
@@ -246,6 +246,7 @@ a.close img {
 }
 
 .content-type-button div {
+  width: 85%;
   top: -5px;
   left: 2px;
   float: left;
